name:               scalacheck
version:            0.2.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , time == 1.8.*
                  , hakyll == 4.13.*
  ghc-options:      -threaded
  default-language: Haskell2010
